--- a/cliente/public/index.html
+++ b/cliente/public/index.html
@@ -25,10 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Bomberos SV</title>
-    <script
-      id="react-dotenv"
-      src="http://cuerpobomberos.gob.sv//env.js"
-    ></script>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
